feat: remove Guava dependency from core module
Replace all Guava usages with JDK alternatives and Caffeine:
- SchemaValidator: Guava CacheBuilder → Caffeine LoadingCache
- ApiOperationResolver: HashBasedTable → HashMap<String, EnumMap<>>
- ContentTypeUtils/RequestValidator/ResponseValidator: Guava MediaType → internal util.MediaType
- HttpParsingUtils: Multimap → Map<String, List<String>>
- HttpAcceptUtils: ImmutableList → List.of()
- SimpleRequest/SimpleResponse: MultimapBuilder → TreeMap (case-insensitive for headers)
- ImmutableMessage/ImmutableValidationReport/MergedValidationReport: ImmutableList → List.of()
- ValidationErrorsWhitelist/WhitelistRule/WhitelistRules: ImmutableList → JDK lists
- ApiPathImpl: ImmutableMap → Map.of()
- @VisibleForTesting: new project-local annotation (util.VisibleForTesting)
- Pact/Spring-WebMVC test sources: Guava → JDK alternatives

New dependencies: Caffeine 3.1.8
Removed: com.google.guava:guava from all modules

Closes #828